# sample-client-for-amazon-bedrock

./: .gitignore  GenDev.md  GenDevHistory.md  README.md  README_CN.md  THIRD-PARTY-LICENSES  next.config.mjs  pack-web-zip.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: cancel-notarization.yml  check-apple-services.yml  check-ios-versions.yml  check-notarization-status.yml  diagnose-notarization.yml  monitor-notarization.yml  optimized-notarization.yml  publish-to-auto-release.yml  setup-api-key-guide.yml  test-android-only.yml  test-api-key-notarization.yml  test-build-only.yml  test-ios-only.yml  test-macos-only.yml  test-macos-signing-fixed.yml  test-macos-signing.yml  validate-api-key.yml
app/: constant.ts  utils.ts
app/client/: api.ts
app/components/: auth-beta.tsx  auth.tsx  chat.module.scss  chat.tsx  exporter.tsx  home.tsx  mask-detail.tsx  mask-list.tsx  mask.tsx  mcp-server-config.tsx  mcp.tsx  model-config.tsx  model-dropdown.module.scss  model-dropdown.tsx  new-chat.module.scss  new-chat.tsx  ui-lib.tsx  (+2 more)
cloudformation/: BRClientWebDeploy.json  BRClientWebDeployCognito.json  README.md
docs/: faq-en.md  faq-es.md  faq-ja.md  faq-ko.md  user-manual-cn.md
electron-app/: index.html  main.js  package-lock.json  package.json  preload.js
flutter_app/: README.md  flutter_launcher_icons.yaml  pubspec.yaml
public/: prompts.json
sample_config/: bedrock-models.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
test-notarization/: README.md  compare-methods.sh  hello.c  quick-test.sh  test-notarization.sh
(+46 files in other folders)
